crates/bitnet-server/tests/snapshots/snapshot_tests__batch_engine_config_default_batch_size.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: "format!(\"max_batch_size={} max_concurrent_batches={}\", cfg.max_batch_size,\ncfg.max_concurrent_batches)"
---
max_batch_size=16 max_concurrent_batches=4
