crates/bitnet-server/tests/snapshots/snapshot_tests__concurrency_config_default_max_requests.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: "format!(\"max_concurrent={}\", cfg.max_concurrent_requests)"
---
max_concurrent=100
