crates/bitnet-server/tests/snapshots/snapshot_tests__device_config_variants_debug.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: "variants.join(\"\\n\")"
---
Cpu
Auto
