crates/bitnet-server/tests/snapshots/snapshot_tests__device_selection_strategy_variants.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: debug
---
[
    "PreferGpu",
    "CpuOnly",
    "PerformanceBased",
    "LoadBalance",
]
