crates/bitnet-server/tests/snapshots/snapshot_tests__execution_router_config_default.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: cfg
---
ExecutionRouterConfig {
    strategy: PerformanceBased,
    fallback_enabled: true,
    health_check_interval: 30s,
    performance_threshold_tps: 10.0,
    memory_threshold_percent: 0.8,
    benchmark_on_startup: true,
}
