crates/bitnet-server/tests/snapshots/snapshot_tests__liveness_response.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: resp
---
{
  "status": "healthy",
  "timestamp": "2025-01-01T00:00:00Z"
}
