crates/bitnet-server/tests/snapshots/snapshot_tests__readiness_response_ready.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: resp
---
{
  "status": "ready",
  "timestamp": "2025-01-01T00:00:00Z",
  "checks": {
    "model_loaded": true,
    "inference_engine_ready": true,
    "device_available": true,
    "resources_available": true
  }
}
