crates/bitnet-server/tests/snapshots/snapshot_tests__server_settings_default_device_is_auto.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", cfg.default_device)"
---
Auto
