crates/bitnet-server/tests/snapshots/snapshot_tests__server_settings_default_host_and_port.snap
---
source: crates/bitnet-server/tests/snapshot_tests.rs
expression: "format!(\"host={} port={}\", cfg.host, cfg.port)"
---
host=0.0.0.0 port=8080
